@@ -1,6 +1,23 @@
 #!/usr/bin/env python3
 import sys
 
+required_python_version = (3, 3)
+if sys.version_info < required_python_version:
+    import os
+    from PyQt5.QtWidgets import QApplication, QMessageBox
+    _ = QApplication([])
+    box = QMessageBox()
+    box.setIcon(QMessageBox.Critical)
+    box.setWindowTitle("Frescobaldi")
+    box.setText("Python version too old")
+    box.setInformativeText(
+        "Frescobaldi is started with Python {}.{} "
+        "but requires at least version {}.{}.".format(
+          sys.version_info[0], sys.version_info[1],
+          required_python_version[0], required_python_version[1]))
+    box.exec()
+    sys.exit(1)
+
 from frescobaldi_app import toplevel
 toplevel.install()
 
@@ -13,4 +30,3 @@ main.main()                     # Parse command line, create windows etc
 sys.excepthook = app.excepthook # Show Python errors in a bugreport window
 
 sys.exit(app.run())
-
